cmake_minimum_required(VERSION 3.7)
project(CACHeCoin)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        build/build.h
        build/moc_aboutdialog.cpp
        build/moc_addressbookpage.cpp
        build/moc_addresstablemodel.cpp
        build/moc_askpassphrasedialog.cpp
        build/moc_bitcoinaddressvalidator.cpp
        build/moc_bitcoinamountfield.cpp
        build/moc_bitcoingui.cpp
        build/moc_blockbrowser.cpp
        build/moc_cachecoinaddressvalidator.cpp
        build/moc_cachecoinamountfield.cpp
        build/moc_cachecoingui.cpp
        build/moc_chatwindow.cpp
        build/moc_clientmodel.cpp
        build/moc_coincontroldialog.cpp
        build/moc_coincontroltreewidget.cpp
        build/moc_csvmodelwriter.cpp
        build/moc_editaddressdialog.cpp
        build/moc_guiutil.cpp
        build/moc_monitoreddatamapper.cpp
        build/moc_notificator.cpp
        build/moc_optionsdialog.cpp
        build/moc_optionsmodel.cpp
        build/moc_overviewpage.cpp
        build/moc_qvalidatedlineedit.cpp
        build/moc_qvaluecombobox.cpp
        build/moc_rpcconsole.cpp
        build/moc_sendcoinsdialog.cpp
        build/moc_sendcoinsentry.cpp
        build/moc_serveur.cpp
        build/moc_signverifymessagedialog.cpp
        build/moc_transactiondesc.cpp
        build/moc_transactiondescdialog.cpp
        build/moc_transactionfilterproxy.cpp
        build/moc_transactiontablemodel.cpp
        build/moc_transactionview.cpp
        build/moc_walletmodel.cpp
        build/ui_aboutdialog.h
        build/ui_addressbookpage.h
        build/ui_askpassphrasedialog.h
        build/ui_blockbrowser.h
        build/ui_chatwindow.h
        build/ui_coincontroldialog.h
        build/ui_editaddressdialog.h
        build/ui_optionsdialog.h
        build/ui_overviewpage.h
        build/ui_rpcconsole.h
        build/ui_sendcoinsdialog.h
        build/ui_sendcoinsentry.h
        build/ui_signverifymessagedialog.h
        build/ui_transactiondescdialog.h
        src/json/json_spirit.h
        src/json/json_spirit_error_position.h
        src/json/json_spirit_reader.cpp
        src/json/json_spirit_reader.h
        src/json/json_spirit_reader_template.h
        src/json/json_spirit_stream_reader.h
        src/json/json_spirit_utils.h
        src/json/json_spirit_value.cpp
        src/json/json_spirit_value.h
        src/json/json_spirit_writer.cpp
        src/json/json_spirit_writer.h
        src/json/json_spirit_writer_template.h
        src/obj/build.h
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/aboutdialog.cpp
        src/qt/aboutdialog.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bitcoin.cpp
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/bitcoinstrings.cpp
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/chatwindow.cpp
        src/qt/chatwindow.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/macdockiconhandler.h
        src/qt/monitoreddatamapper.cpp
        src/qt/monitoreddatamapper.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/qrcodedialog.cpp
        src/qt/qrcodedialog.h
        src/qt/qtipcserver.cpp
        src/qt/qtipcserver.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/serveur.cpp
        src/qt/serveur.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/scrypt-jane/code/scrypt-conf.h
        src/scrypt-jane/code/scrypt-jane-chacha.h
        src/scrypt-jane/code/scrypt-jane-hash.h
        src/scrypt-jane/code/scrypt-jane-hash_blake256.h
        src/scrypt-jane/code/scrypt-jane-hash_blake512.h
        src/scrypt-jane/code/scrypt-jane-hash_keccak.h
        src/scrypt-jane/code/scrypt-jane-hash_sha256.h
        src/scrypt-jane/code/scrypt-jane-hash_sha512.h
        src/scrypt-jane/code/scrypt-jane-hash_skein512.h
        src/scrypt-jane/code/scrypt-jane-mix_chacha-avx.h
        src/scrypt-jane/code/scrypt-jane-mix_chacha-sse2.h
        src/scrypt-jane/code/scrypt-jane-mix_chacha-ssse3.h
        src/scrypt-jane/code/scrypt-jane-mix_chacha.h
        src/scrypt-jane/code/scrypt-jane-mix_salsa-avx.h
        src/scrypt-jane/code/scrypt-jane-mix_salsa-sse2.h
        src/scrypt-jane/code/scrypt-jane-mix_salsa.h
        src/scrypt-jane/code/scrypt-jane-mix_salsa64-avx.h
        src/scrypt-jane/code/scrypt-jane-mix_salsa64-sse2.h
        src/scrypt-jane/code/scrypt-jane-mix_salsa64-ssse3.h
        src/scrypt-jane/code/scrypt-jane-mix_salsa64.h
        src/scrypt-jane/code/scrypt-jane-pbkdf2.h
        src/scrypt-jane/code/scrypt-jane-portable-x86.h
        src/scrypt-jane/code/scrypt-jane-portable.h
        src/scrypt-jane/code/scrypt-jane-romix-basic.h
        src/scrypt-jane/code/scrypt-jane-romix-template.h
        src/scrypt-jane/code/scrypt-jane-romix.h
        src/scrypt-jane/code/scrypt-jane-salsa.h
        src/scrypt-jane/code/scrypt-jane-salsa64.h
        src/scrypt-jane/code/scrypt-jane-test-vectors.h
        src/scrypt-jane/scrypt-jane.c
        src/scrypt-jane/scrypt-jane.h
        src/test/accounting_tests.cpp
        src/test/allocator_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bignum_tests.cpp
        src/test/Checkpoints_tests.cpp
        src/test/DoS_tests.cpp
        src/test/getarg_tests.cpp
        src/test/key_tests.cpp
        src/test/miner_tests.cpp
        src/test/mruset_tests.cpp
        src/test/multisig_tests.cpp
        src/test/netbase_tests.cpp
        src/test/rpc_tests.cpp
        src/test/script_P2SH_tests.cpp
        src/test/script_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/test_bitcoin.cpp
        src/test/transaction_tests.cpp
        src/test/uint160_tests.cpp
        src/test/uint256_tests.cpp
        src/test/util_tests.cpp
        src/test/wallet_tests.cpp
        src/addrman.cpp
        src/addrman.h
        src/alert.cpp
        src/alert.h
        src/allocators.h
        src/base58.h
        src/bignum.h
        src/bitcoinrpc.cpp
        src/bitcoinrpc.h
        src/chat.cpp
        src/chat.h
        src/checkpoints.cpp
        src/checkpoints.h
        src/clientversion.h
        src/coincontrol.h
        src/compat.h
        src/crypter.cpp
        src/crypter.h
        src/db.cpp
        src/db.h
        src/init.cpp
        src/init.h
        src/irc.cpp
        src/irc.h
        src/kernel.cpp
        src/kernel.h
        src/key.cpp
        src/key.h
        src/keystore.cpp
        src/keystore.h
        src/main.cpp
        src/main.h
        src/mruset.h
        src/net.cpp
        src/net.h
        src/netbase.cpp
        src/netbase.h
        src/noui.cpp
        src/pbkdf2.cpp
        src/pbkdf2.h
        src/protocol.cpp
        src/protocol.h
        src/rpcblockchain.cpp
        src/rpcdump.cpp
        src/rpcmining.cpp
        src/rpcnet.cpp
        src/rpcrawtransaction.cpp
        src/rpcwallet.cpp
        src/script.cpp
        src/script.h
        src/scrypt_mine.cpp
        src/scrypt_mine.h
        src/serialize.h
        src/strlcpy.h
        src/sync.cpp
        src/sync.h
        src/ui_interface.h
        src/uint256.h
        src/util.cpp
        src/util.h
        src/version.cpp
        src/version.h
        src/wallet.cpp
        src/wallet.h
        src/walletdb.cpp
        src/walletdb.h
        cachecoin-qt.pro
        INSTALL
        qrc_bitcoin.cpp
        qrc_cachecoin.cpp
        README.md)

add_executable(CACHeCoin ${SOURCE_FILES})